--- a/flaticon.css
+++ b/flaticon.css
@@ -52,4 +52,4 @@
 .flaticon-time:before { content: "\f116"; }
 .flaticon-twitter:before { content: "\f117"; }
 .flaticon-twitter-1:before { content: "\f118"; }
-.flaticon-link:before { content: "\f10l"; }
+.flaticon-link1:before { content: "\f1ac"; }
